# hospital-database

./: .env.example  .gitignore  create_database.sql  pyproject.toml
database/: admin.py  forms.py  mixins.py  models.py  serializers.py  urls.py  utils.py  views.py
database/static/database/css/: doctor.css  doctor.scss  doctors_list.css  doctors_list.scss  main_page.css  main_page.scss  patient.css  patient.scss  patients_list.css  patients_list.scss  reset.css  visit.css  visit.scss
database/static/database/css/commons/: hospital_common_styles.css  hospital_common_styles.scss
database/templates/database/: doctor.html  doctor_list.html  get_visit.html  main_page.html  patient.html  patient_list.html  visit.html
frontend/: package-lock.json  package.json
frontend/templates/frontend/: main_page.html
hospital/: settings.py  urls.py
static/database/_inc/css/: _header.css  _header.scss
static/database/css/: base.css  base.scss
templates/database/: base.html
templates/database/_inc/: _header.html
