[tool.poetry]
name = "hospital"
version = "0.1.0"
description = ""
authors = ["korchizhinskiy <korchizhinskiy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
python-dotenv = "^0.21.0"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
django-stubs = "^1.12.0"
django-debug-toolbar = "^3.7.0"
psycopg2 = "^2.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
